--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -7,24 +7,31 @@
         <small>({{arrayLength ../homeworks}} Aufgabe{{#ifneq 1 (arrayLength ../homeworks)}}n{{/ifneq}})</small>
       </div>
     {{else}}
-      <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
-        <span>Noch keine gestellten Aufgaben</span>
-      </p>
+      <div class="empty-state">
+        <img src="/images/empty-states/assignment.png" alt="Keine gestellten Aufgaben" class="image"/>
+        <h4>Erstelle die erste Aufgabe in deinem Kurs</h4>
+        <h6 class="sub-title">
+          Kursteilnehmer können spielend leicht Aufgaben bis zu einem gesetzten Termin bearbeiten und Ergebnisse digital einreichen.
+          Aufgaben können für einen ganzen Kurs gestellt werden oder für ein einzelnes Thema im Kurs.
+        </h6>
+      </div>
     {{/ifneq}}
-    <div id="homeworks" class="container-fluid">
-      <ol class="homework">
-        <div class="row">
-          {{#each homeworks}}
-            {{> 'homework/components/course_overview_card_template'}}
-          {{/each}}
-        </div>
-      </ol>
-    </div>
+    {{#if homeworks}}
+      <div id="homeworks" class="container-fluid">
+        <ol class="homework">
+          <div class="row">
+            {{#each homeworks}}
+              {{> 'homework/components/course_overview_card_template'}}
+            {{/each}}
+          </div>
+        </ol>
+      </div>
+    {{/if}}
   </div>
-  <div class="col-sm-12">
+  <div class="col-sm-12 add-button">
     {{#userHasPermission "COURSE_EDIT" }}
-      <a href="/homework/new?course={{../_id}}" class="btn btn-primary w-100 pull-right" title="Aufgabe hinzufügen">
-        <i class="fa fa-plus" aria-hidden="true"></i><span> Aufgabe hinzufügen</span>
+      <a href="/homework/new?course={{../_id}}" class="btn btn-primary {{#if ../homeworks}}w-100{{else}}btn-empty{{/if}}" title="Aufgabe hinzufügen">
+        <span>Erstelle eine Aufgabe</span>
       </a>
     {{/userHasPermission}}
   </div>
