--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -77,7 +77,7 @@
     </span>
 </div>
 
-{{> "account/notification" this }}
+{{> "account/notification" }}
 
 {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
 {{#content "body"}}
