--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -20,17 +20,21 @@
         </ol>
       </div>
     {{else}}
-    <div class="list-group">
-      <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
-        <span>Noch keine Schülergruppen</span>
-      </p>
-    </div>
+      <div class="empty-state">
+        <img src="/images/empty-states/gruppe.png" alt="Keine erstellte Gruppe" class="image"/>
+        <h4>Erstelle Gruppen innerhalb eines Kurses</h4>
+        <h6 class="sub-title">
+          Mithilfe von Schülergruppen kannst du deine Teilnehmer*innen innerhalb eines Kurses in Teams aufteilen, z.B. für Gruppenarbeiten.
+        </h6>
+      </div>
     {{/ifneq}}
 
     {{#userHasPermission "COURSEGROUP_CREATE"}}
-    <a href="/courses/{{../id}}/groups/add" class="btn btn-primary w-100 pull-right" title="Gruppe hinzufügen">
-      <i class="fa fa-plus" aria-hidden="true"></i><span> Schülergruppe hinzufügen</span>
-    </a>
+    <div class="add-button">
+      <a href="/courses/{{../id}}/groups/add" class="btn btn-primary {{#ifneq 0 (arrayLength ../courseGroups)}}w-100{{else}}btn-empty{{/ifneq}}" title="Gruppe hinzufügen">
+        <span>Erstelle eine neue Gruppe</span>
+      </a>
+    </div>
     {{/userHasPermission}}
   </div>
 </div>
