fix 18 years to 16 in some texts

--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -8,7 +8,7 @@
   {{#content "page"}}
     <div id="welcome-screen">
       <h4>Willkommen zur Anmeldung in der {{theme.title}}!</h4>
-      <p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter 16 muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei volljährigen Schülern er selbst.</p>
+      <p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter 16 muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei Schülern über 16 er selbst.</p>
       <p>Bitte wähle das Alter des Schülers:</p>
       <div class="form-group">
           <fieldset>
