Fix card clickability

--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,4 +1,4 @@
-<article class="sc-card" href="{{this.url}}" rel="canonical">
+<article class="sc-card" onclick="location.href='{{this.url}}'" rel="canonical">
     <div class="sc-card-header" {{#if this.background}} style="background:{{this.background}};"
         {{/if}}>
         {{#if this.isRSS}}
