--- a/theme/open/views/lib/default.hbs
+++ b/theme/open/views/lib/default.hbs
@@ -17,12 +17,12 @@
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="#b10438">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#126dc4">
         <meta name="apple-mobile-web-app-title" content="{{theme.title}}">
-        <meta name="theme-color" content="#b10438">
+        <meta name="theme-color" content="#126dc4">
         <meta name="application-name" content="{{theme.title}}">
         <meta name="X-Recruiting" content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
-        <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
+        <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#126dc4">
         <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
         <link rel="apple-touch-icon" sizes="152x152" href="/images/logo/app-icon-152.png">
@@ -32,6 +32,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/images/logo/favicon-32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/logo/favicon-16.png">
         <link rel="manifest" href="/images/manifest.json">
+        <meta name="robots" content="noindex, nofollow">
     {{/block}}
 
     {{#block "styles"}}
