--- a/theme/open/views/imprint/imprint.hbs
+++ b/theme/open/views/imprint/imprint.hbs
@@ -1,4 +1,5 @@
 <div class="section-imprint">
+	<h1>KOPIE - TODO: REMOVE !!!</h1>
 	<h5>
 		<strong>HPI Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH</strong>
 	</h5>
