--- a/theme/open/views/lib/footer.hbs
+++ b/theme/open/views/lib/footer.hbs
@@ -2,16 +2,12 @@
 	<div class="imprint">
 		<div class="center">
 			<img src="/images/footer-logo.png" alt="Anbieterlogo" />
-			<span>&copy; 2019 - current {{theme.short_title}} </span>
+			<span>&copy; 2019 {{theme.short_title}} </span>
 
 			<div>
 				<a href="/impressum" target="_blank">Impressum</a>
 				<span> - </span>
 				<a href="/impressum#data_security" target="_blank">Datenschutzerklärung</a>
-				<span> - </span>
-				<a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank">Kontakt</a>
-				<span> - </span>
-				<a href="/community" target="_blank">Mitmachen</a>
 				<span> - </span>
 				<a href="https://github.com/schul-cloud/" target="_blank">GitHub</a>
 			</div>
