centered alignment of table heading to align toggles

--- a/views/account/notification.hbs
+++ b/views/account/notification.hbs
@@ -58,8 +58,8 @@
 					<thead class="thead-light">
 						<tr>
 							<th>Benachrichtigung</th>
-							<th align="center">E-Mail</th>
-							<th align="center">Push</th>
+							<th style="text-align: center;">E-Mail</th>
+							<th style="text-align: center;">Push</th>
 						</tr>
 					</thead>
 					<tbody>
