--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -35,7 +35,7 @@
 </div>
 
 <div class="form-group">
-    <label>Nutzer-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom rootPath zu dem LDAP-Knoten von dem alle Nutzer erreichbar sind."></i></label>
+    <label>Nutzer-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom root-Pfad zu dem LDAP-Knoten von dem alle Nutzer erreichbar sind."></i></label>
     <input class="form-control linked" name="userpath" type="text" value="{{system.ldapConfig.providerOptions.userPathAdditions}}"/>
 </div>
 
@@ -135,7 +135,7 @@
 </label>
 <div class="class-settings">
     <div class="form-group">
-        <label>Klassen-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom rootPath zu dem LDAP-Knoten von dem alle Klassen erreichbar sind"></i></label>
+        <label>Klassen-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom root-Pfad zu dem LDAP-Knoten von dem alle Klassen erreichbar sind"></i></label>
         <input class="form-control linked" name="classpath" type="text" value="{{system.ldapConfig.providerOptions.classPathAdditions}}"/>
     </div>
     <div class="row">
