--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -27,7 +27,7 @@
   }
 
   .card.folder {
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    padding: 10px;
 
     &:hover {
       box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
@@ -36,8 +36,15 @@
     }
 
     .fa {
-      margin-right: 15px;
       color: #ccc;
+      padding: 5px;
+      margin-right: 5px;
+    }
+
+    .directory-icon{
+      &:hover {
+        color: $primaryColor;
+      }
     }
   }
 
@@ -119,7 +126,7 @@
 
     .file-preview {
       width: 90%;
-      height: 65px;
+      height: 35px;
       float: left;
       margin-right: 5px;
       background: no-repeat center center;
@@ -127,8 +134,7 @@
     }
 
     .fa {
-      margin-top: 10px;
-      margin-right: 15px;
+      padding: 7px;
       vertical-align: text-top;
       color: #ccc;
       &:hover {
@@ -136,24 +142,31 @@
       }
     }
     .card-block {
+      padding: 10px;
       a:hover {
         text-decoration: none;
+      }
+
+      .card-title{
+        display: flex;
+        align-items: center;
+        margin-bottom: 0;
       }
     }
     .title {
       white-space: nowrap;
-      width: calc(75% - 30px);
+      width: calc(90%);
       overflow: hidden;
       text-overflow: ellipsis;
       display: inline-block;
     }
-    .file-preview {
+    .file-preview-wrapper {
       @media screen and (max-width: 575px) {
         display: none;
       }
     }
     .card-text {
-      line-height: 2;
+      line-height: 1;
     }
 
     .file-location {
@@ -247,10 +260,6 @@
   }
 }
 
-.file-name-edit {
-  display: none;
-}
-
 .popup-overlay{
   visibility:hidden;
   position:absolute;
@@ -280,5 +289,3 @@
   margin-left: -10px;
   height: 2.2em;
 }
-
-
