--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -1,34 +1,36 @@
 <section class="files">
     <div class="row">
         {{#each files}}
-            <div class="col-sm-6 col-xs-12 col-md-4">
+            <div class="col-sm-12 col-xs-12 col-md-12">
                 <div class="card file" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}" data-file-size="{{this.size}}" data-file-id="{{this._id}}">
                     <div class="openFile">
                         <div class="card-block"
                              onclick="location.href='#file-view';
                                      fileViewer('{{this.type}}', '{{this.key}}', '{{this.name}}', '{{this._id}}');">
                             <div class="card-title">
-                                <div class="col-sm-3 no-padding">
+                                <div class="file-preview-wrapper col-sm-1 no-padding">
                                     <div class="file-preview"
-                                         style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
+                                         style="background-image: url({{this.thumbnail}}); -webkit-background-size: 25px ;background-size: 25px;"></div>
                                 </div>
-                                <a class="title">
+                                <a class="col-sm-10 title">
                                     {{this.name}}
                                 </a>
-                                <i data-file-id="{{this._id}}"
-                                    data-file-name="{{this.name}}" 
-                                    data-file-path="{{this.path}}"
-                                    class="fa fa-edit file-name-edit">
-                                </i>
                             </div>
                             <div class="card-text">
                                 <small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small><br>
+
                                 <a href="/files/file?download=1&file={{this.file}}"
                                    target="_blank"
                                    data-method="download"
                                    title="Datei herunterladen">
                                     <i class="fa fa-cloud-download"></i>
                                 </a>
+
+                                <i  data-file-id="{{this._id}}"
+                                    data-file-name="{{this.name}}"
+                                    data-file-path="{{this.path}}"
+                                    class="fa fa-edit file-name-edit">
+                                </i>
 
                                 {{#ifneq this.context 'geteilte Datei'}}
                                 {{#userHasPermission "FILE_DELETE"}}
@@ -88,7 +90,7 @@
                                 {{/if}}
 
                                 <!--{{#if this.isOfficeFile}} todo: discuss just onClick or own button?
-                                <a href="/files/file/{{this._id}}/lool" 
+                                <a href="/files/file/{{this._id}}/lool"
                                     target="_blank"
                                     data-method="lool">In LibreOffice öffnen</a>
                                 {{/if}}-->
