--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -134,7 +134,7 @@
     }
 
     .fa {
-      padding: 7px;
+      padding: 7px 7px 0 7px;
       vertical-align: text-top;
       color: #ccc;
       &:hover {
