--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -165,7 +165,7 @@
 </div>
 
 <div class="modal-footer mt-1">
-    <a href="/administration/systems" class="btn btn-secondary">Abbrechen</a>
+    <a href="/administration/school" class="btn btn-secondary">Abbrechen</a>
     <button id="verify" class="btn btn-primary">
         <i id="verify-icon"></i>
         Verifizieren
