--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -25,7 +25,7 @@
           <img src="/images/empty-states/tool.png" alt="Keine hinzufügten Tools" class="image"/>
           <h4>Füge dem Kurs Tools hinzu</h4>
           <h6 class="sub-title">
-            Hier können interaktive Tools, wie GeoGebra oder CodeOcean, einem Kurs hinzugefügt werden.
+            Füge hier interaktive Tools, wie GeoGebra oder CodeOcean, einem Kurs hinzu.
           </h6>
         </div>
       {{/if}}
