Fix import button visibility for users with multiple roles

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -88,11 +88,11 @@
                                 <button class="btn btn-secondary btn-invitation-link student">
                                     Einladungslink generieren
                                 </button>
-                                {{#ifeq currentRole "Administrator"}}
+                                {{#inArray "Administrator" roleNames}}
                                     <button class="btn btn-secondary btn-import student">
                                         Schüler importieren
                                     </button>
-                                {{/ifeq}}
+                                {{/inArray}}
                             </div>
                         {{/if}}
                     </div>
