--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -1,4 +1,5 @@
 @import '../lib/colors';
+@import '../lib/bootstrap/scss/bootstrap-flex';
 
 .move-handle {
   cursor: move;
@@ -313,4 +314,30 @@
 
 .section-course-group {
   padding-top: 20px;
+}
+
+.section-courses{
+  .course-empty{
+    .center{
+      margin: 0 auto;
+      float: none;
+    }
+    .btn-import-course{
+      margin-right: 20px;
+    }
+    .image{
+      width: 35%;
+      margin-bottom: 50px;
+      opacity: .8;
+    }
+    .buttons{
+      margin-bottom: 30px;
+      .btn {
+        @include media-breakpoint-down(xs) {
+          width: 100%;
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
 }
