--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -1,4 +1,5 @@
 @import '../lib/colors';
+@import '../lib/bootstrap/scss/bootstrap-flex';
 
 .move-handle {
   cursor: move;
@@ -149,6 +150,12 @@
     max-width: 60%;
     margin: 0 auto;
     margin-top: 20px;
+    @include media-breakpoint-down(xs) {
+      max-width: 90%;
+    }
+    @include media-breakpoint-up(xs) {
+      max-width: 60%;
+    }
     h6.sub-title {
       color: $colorDarkerGrey;
     }
@@ -156,6 +163,12 @@
       width: auto;
       height: auto;
       margin-bottom: 30px;
+      @include media-breakpoint-down(xs) {
+        max-width: 80px;
+      }
+      @include media-breakpoint-up(xs) {
+        max-width: 100px;
+      }
     }
   }
 
@@ -337,22 +350,4 @@
 
 .section-course-group {
   padding-top: 20px;
-}
-
-@media (min-width: 576px) {
-  .empty-state{
-    max-width: 60%;
-  }
-  img.image {
-    max-width: 100px;
-  }
-}
-
-@media (max-width: 575px) {
-  .empty-state{
-    max-width: 90%;
-  }
-  img.image {
-    max-width: 80px;
-  }
 }
