css move around

--- a/views/courses/components/courseEmpty.hbs
+++ b/views/courses/components/courseEmpty.hbs
@@ -1,6 +1,8 @@
 
 <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
-<h2 class="text-center">Mit der Schul-Cloud Unterricht digital gestalten</h2>
-<h5 class="text-muted text-center">
-    Lege deinen ersten Kurs an. Ein Kurs auf der Schul-Cloud bildet die Grundlage  zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
-</h5>
+<div class="text-wrapper mx-auto d-block">
+  <h2 class="text-center">Mit der Schul-Cloud Unterricht digital gestalten</h2>
+  <h5 class="text-muted text-center">
+      Lege deinen ersten Kurs an. Ein Kurs auf der Schul-Cloud bildet die Grundlage  zur Verwaltung von Themen, Aufgaben, Tools und mehr für digitales Lernen.
+  </h5>
+</div>
