added student teacher differentiation

--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -9,11 +9,15 @@
     {{else}}
       <div class="empty-state">
         <img src="/images/empty-states/assignment.png" alt="Keine gestellten Aufgaben" class="image"/>
-        <h4>Erstelle die erste Aufgabe in deinem Kurs</h4>
-        <h6 class="sub-title">
-          Kursteilnehmer können spielend leicht Aufgaben bis zu einem gesetzten Termin bearbeiten und Ergebnisse digital einreichen.
-          Aufgaben können für einen ganzen Kurs gestellt werden oder für ein einzelnes Thema im Kurs.
-        </h6>
+        {{#userHasPermission "COURSE_EDIT" }}
+          <h4>Erstelle die erste Aufgabe in deinem Kurs</h4>
+          <h6 class="sub-title">
+            Kursteilnehmer können spielend leicht Aufgaben bis zu einem gesetzten Termin bearbeiten und Ergebnisse digital einreichen.
+            Aufgaben können für einen ganzen Kurs gestellt werden oder für ein einzelnes Thema im Kurs.
+          </h6>
+        {{else}}
+          <h4 class="text-muted">Es gibt noch keine gestellten Aufgaben in diesem Kurs</h4>
+        {{/userHasPermission}}
       </div>
     {{/ifneq}}
     {{#if homeworks}}
