--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -22,10 +22,14 @@
     {{else}}
       <div class="empty-state">
         <img src="/images/empty-states/gruppe.png" alt="Keine erstellte Gruppe" class="image"/>
-        <h4>Erstelle Gruppen innerhalb eines Kurses</h4>
-        <h6 class="sub-title">
-          Mithilfe von Schülergruppen kannst du deine Teilnehmer*innen innerhalb eines Kurses in Teams aufteilen, z.B. für Gruppenarbeiten.
-        </h6>
+        {{#userHasPermission "COURSEGROUP_CREATE"}}
+          <h4>Erstelle eine Gruppe</h4>
+          <h6 class="sub-title">
+            In Gruppen können sich Teilnehmer*innen innerhalb eines Kurses in Teams aufteilen, z.B. für Gruppenarbeiten.
+          </h6>
+        {{else}}
+          <h4 class="text-muted">Es gibt noch keine Gruppen in diesem Kurs</h4>
+        {{/userHasPermission}}
       </div>
     {{/ifneq}}
 
