--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -79,11 +79,15 @@
       {{else}}
         <div class="empty-state empty-state-courses">
           <img src="/images/empty-states/topic.png" alt="Leeres Thema" class="image"/>
-          <h4>Erstelle das erste Thema in deinem Kurs</h4>
-          <h6 class="sub-title">
-            Füge Texte, Bilder, Videos und andere Materialien zu einem Thema hinzu.
-            Ein Thema umfasst eine Unterrichtseinheit oder -stunde innerhalb deines Kurses.
-          </h6>
+          {{#userHasPermission "COURSE_EDIT"}}
+            <h4>Erstelle das erste Thema in deinem Kurs</h4>
+            <h6 class="sub-title">
+              Füge Texte, Bilder, Videos und andere Materialien zu einem Thema hinzu.
+              Ein Thema umfasst eine Unterrichtseinheit oder -stunde innerhalb deines Kurses.
+            </h6>
+          {{else}}
+            <h4 class="text-muted">Es gibt noch keine Themen in diesem Kurs</h4>
+          {{/userHasPermission}}
         </div>
       {{/if}}
     </div>
