added empty state to homeworks

--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -49,7 +49,7 @@
               {{#userHasPermission "COURSE_EDIT"}}
                 <div class="row padding-top">
                     <div class="center buttons">
-                        <a class="btn btn-secondary btn-lg btn-import-course">Importiere einen Kurs</a>
+                        <a class="btn btn-secondary btn-lg btn-first">Importiere einen Kurs</a>
                         <a href="/courses/add" class="btn btn-primary btn-lg btn-add">Erstelle deinen ersten Kurs</a>
                     </div>
                 </div>
