--- a/static/styles/courses/empty-state.scss
+++ b/static/styles/courses/empty-state.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
     float: none;
   }
-  .btn-import-course{
+  .btn-first{
     margin-right: 20px;
   }
   .image{
@@ -23,6 +23,7 @@
     }
   }
   .text-wrapper{
+    margin-bottom: 30px;
     @include media-breakpoint-up(xs) {
       max-width: 70%;
     }
